# AltoSymbiosisAgents

./: .gitignore  CHANGELOG.md  CODEBASE_REVIEW_REPORT.md  HANDOFF.md  LICENSE  README.md  SECURITY.md  START_HERE.bat  START_HERE.md  Start.bat  electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
backend/: README.md  db.py  models.py  pyinstaller.spec  pyproject.toml  pytest.ini  requirements-bench.txt  requirements-build.txt  requirements-dev.txt  requirements.txt  server.py  sse_events.py
backend/config/: models.json
backend/core/: errors.py  model_catalog.py  paths.py  settings.py  smoke_harness.py
backend/core/api/: __init__.py  agents.py  chat.py  escalation.py  lifecycle.py  mcp.py  memory.py  settings.py
backend/core/templates/: actor_system.txt
backend/routes/: __init__.py  agents.py  attachments.py  chat.py  conversations.py  escalation.py  events.py  memory.py  models.py  prompt_templates.py  safety.py  settings.py  system.py  usage.py  voice.py
backend/services/: agent_registry.py  audit_log.py  bundled_server.py  chat_orchestrator.py  claude_client.py  docker_manager.py  error_classifier.py  escalation_ladder.py  execution_bridge.py  governance.py  health_monitor.py  hub_router.py  input_sanitizer.py  lifecycle.py  llm_interface.py  llm_litellm_adapter.py  local_client.py  margin_proxy.py  mcp_credentials.py  mcp_loader.py  mcp_registry.py  memory_recall.py  model_canary.py  orchestrator_graph.py  pipeline.py  qwen_thinking.py  rag_index.py  redact.py  router.py  security_engine.py  security_gate.py  semantic_search.py  task_artifacts.py  turn_context.py  turn_lifecycle.py  turn_router.py  voice.py  worker_dispatch.py
backend/services/camel/: __init__.py  adapter.py  capabilities.py  exceptions.py  interpreter.py  pipeline.py  prompts.py
backend/services/memory/: __init__.py  _context.py  buffer.py  rag.py  session_facts.py  write_gate.py
backend/templates/: reader_system.txt
backend/tests/: conftest.py  eval_stats.py  test_agentic_misalignment.py  test_api_chat_roster_facade.py  test_attachments.py  test_bundled_server.py  test_chat_orchestrator.py  test_chat_vision.py  test_conversation_export.py  test_conversation_search.py  test_deflection_scrub.py  test_error_envelopes.py  test_escalation_ladder.py  test_escalation_ladder_margin_proxy.py  test_eval_stats.py  test_governance_escalation.py  test_high_stakes_voting.py  test_hub_router.py  test_hub_router_prefilter.py  test_layer_fences.py  test_litellm_adapter.py  test_local_client_logprobs.py  test_logprob_data_flow.py  test_margin_proxy.py  test_memory.py  test_memory_gate.py  test_memory_recall.py  test_model_canary.py  test_model_catalog.py  test_orchestrator_graph_engine.py  test_pipeline.py  test_prompts.py  test_properties.py  test_reader_actor_split.py  test_reader_output_schema.py  test_redact.py  test_research_extensions.py  test_safety_routes.py  test_security_engine.py  test_security_gate.py  (+10 more)
backend/tests/agentdojo/: __init__.py  run_suites.py  runner.py
backend/tests/agentic_misalignment_scenarios/: blackmail_goal_conflict.json  blackmail_replacement.json  corporate_espionage.json  replacement_announcement.json  shutdown_resistance.json
backend/tests/camel/: test_adversarial.py  test_capabilities.py  test_interpreter.py  test_orchestrator_integration.py  test_pipeline.py
benchmarks/: thresholds.json
build-scripts/: build-sidecar.bat  bundled_versions.json  fetch_bundled_assets.py  generate_api_types.py  generate_benchmarks_md.py
desktop-shell/: main.ts  preload.ts  sidecar-types.ts  sidecar.ts
desktop-ui/: App.tsx  (+3 more)
(+88 files in other folders)
